# aws-serverless-data-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: terraform.yml
architecture/: Architecture.drawio
data/: reference_category_id.json
docs/: README.md  architecture.md  decisions.md  deployment.md  pipeline.md  terraform.md  troubleshooting.md
scripts/: information.md
terraform/: main.tf
terraform/bootstrap/: backend-bootstrap.tf
terraform/budget/: backend.tf  main.tf  provider.tf
terraform/eventbridge/: backend.tf  main.tf  outputs.tf  remote_state.tf
terraform/glue/: backend.tf  bronze_to_silver_statistics_job.tf  crawler.tf  data.tf  glue_catalog_databases.tf  locals.tf  main.tf  outputs.tf  silver_to_gold_analytics_job.tf  upload_to_s3.tf
terraform/iam/: backend.tf  eventbridge_execution_role.tf  glue_execution_role.tf  lambda_execution_role.tf  locals.tf  outputs.tf  provider.tf  step_function_execution_role.tf
terraform/lambda/: backend.tf  data_quality_check_function.tf  dlq.tf  json_to_parquet_function.tf  locals.tf  main.tf  outputs.tf  remote_state.tf  variables.tf  youtube_api_integration_function.tf  youtube_api_integstion_function.tf
terraform/monitoring/: backend.tf  cloudwatch_alarms.tf  locals.tf
terraform/s3/: backend.tf  bronze_bucket.tf  gold_bucket.tf  locals.tf  outputs.tf  provider.tf  query_results_bucket.tf  silver_bucket.tf
terraform/sns/: backend.tf  main.tf  outputs.tf
tests/: conftest.py  requirements-test.txt
(+18 files in other folders)
