[project]
name = "aws-serverless-data-platform"
version = "1.0.0"
description = "Serverless data platform for YouTube trending analytics"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["terraform/lambda/scripts"]